# learnopengl

./: .clang-format  CMakeLists.txt  README.md
(2) Hello Triangle/: Hello Triangle.sln  Hello Triangle.vcxproj.filters
(3) Shaders/: Shader.cpp  Shader.h  Shaders.sln  Shaders.vcxproj  Source.cpp
(3) Shaders/Shaders/: shader.frag
(4) Textures/: Textures.sln
(4) Textures/Textures/: Textures.cpp  Textures.vcxproj  Textures.vcxproj.filters
(5) Transformations/: Transformations.cpp  Transformations.sln
(5) Transformations/Shaders/: shader.vert
01 - Getting Started/02 - Hello Triangle/: Hello Triangle.vcxproj
01 - Getting Started/03 - Shaders/: Shaders.vcxproj.filters
01 - Getting Started/05 - Transformations/: Transformations.cpp  Transformations.vcxproj  Transformations.vcxproj.filters
01 - Getting Started/06 - Coordinate Systems/: CoordinateSystems.cpp  CoordinateSystems.sln  CoordinateSystems.vcxproj  CoordinateSystems.vcxproj.filters  Shader.cpp  Shader.h  Texture.cpp
01 - Getting Started/07 - Camera/: Camera.cpp  Camera.sln  Camera.vcxproj  Camera.vcxproj.filters  Main.cpp
02 - Lighting/01 - Colours/: Colours.sln  Main.cpp
02 - Lighting/02 - Basic Lighting/: Basic Lighting.sln  Main.cpp  Texture.cpp  (+2 more)
Hello Triangle/: Hello Triangle.sln  Source.cpp
Hello Window/: Hello Window.vcxproj  Source.cpp
OpenGL - Hellow Window/: OpenGL - Hellow Window.sln
shaders/: assimp.geom  assimp.vert  asteroid.vert  blending.frag  default.frag  default.vert  environmentmapping.frag  environmentmapping.vert  geometry.frag  geometry.geom  geometry.vert  instancing.frag  instancing.vert  planet.vert  screen.frag  show_normals.frag  show_normals.geom  show_normals.vert  single_colour.frag  skybox.frag  skybox.vert
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
(+58 files in other folders)
